# calculator

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.cfg
.github/workflow/: ci_python_test.yml
.github/workflows/: ci_python_test.yml  cicd.yml
conf/: .env.dev.encrypted
k8s/: deployment.yaml  ingress.yaml  service.yaml
k8s-pv/: hostpath-pv.yaml  hostpath-pvc.yaml
k8s-test/: test-pv.yaml
src/: app.py  main.py  settings.py
src/calculator/: math_ops.py
src/calculator.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_app.py  test_math_ops.py
var/conf/calculator/: .env.dev  .env.dev.gpg  .env.prod
