[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator"
version = "0.1.0"
description = "A simple calculator package"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Calculator Author"}
]
dependencies = [
    "streamlit>=1.24.0"
]    

[project.optional-dependencies]
dev = ["pytest>=6.0"]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["calculator"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
