[project]
name = "calculator"
version = "0.1.0"
description = "A simple calculator app"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Eric Melz"}
]
dependencies = [
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.1",
    "streamlit>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.uv]
dev-dependencies = [
    "pytest>=6.0",
]
